# Prism

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  ms_deploy.json  test.py
backend/: .env  Dockerfile  pyproject.toml  requirements.txt  run_dev.sh  run_tests.sh  run_worker.sh  test_llm.py  test_setup.py
backend/src/api/: main.py
backend/src/config/: __init__.py  constants.py  settings.py
backend/src/core/: input_processor.py  llm_orchestrator.py  prompt_compiler.py  template_router.py  validator.py  wan26_adapter.py
backend/src/models/: __init__.py  ir.py  job.py  shot_asset.py  shot_plan.py  shot_request.py  template.py
backend/src/services/: asset_storage.py  error_classifier.py  ffmpeg_splitter.py  job_manager.py  job_state.py  observability.py  rate_limiter.py  storage.py  wan26_downloader.py
backend/src/templates/: __init__.py  base.py
backend/src/workers/: queue.py  render_tasks.py
backend/tests/: QUICKSTART.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py
backend/tests/contract/: test_openapi.py
backend/tests/fixtures/: __init__.py  sample_data.py
backend/tests/integration/: test_api_e2e.py  test_qwen_integration.py  test_storage.py  test_wan26_integration.py  test_workflows.py
backend/tests/unit/: test_asset_storage.py  test_error_classifier.py  test_ffmpeg_splitter.py  test_input_processor.py  test_job_manager_failures.py  test_job_state.py  test_models.py  test_prompt_compiler.py  test_rate_limiter.py  test_template_router.py  test_validator.py  test_wan26_adapter.py  test_wan26_downloader.py
(+66 files in other folders)
