[project]
name = "prism-backend"
version = "1.0.0"
description = "Medical Text-to-Video Agent Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "dashscope>=1.25.9",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.2",
    "redis>=5.0.1",
    "faiss-cpu>=1.7.4",
    "jinja2>=3.1.2",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "black>=23.12.1",
    "mypy>=1.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
